	- Added a ton of new clothing.
		- Most of these can be found in the Boutique, Clothing Shop, or XXX Store.
		- Hover over the clothing in the store or the clothing change UI to see what they do.
	- Unfortunately this may mean that your saves are no longer compatible.
		- NEVERMIND, I MADE THEM COMPATIBLE :D
- Added a new character initial strength Trait:
	- "Stable Form"
		- Prevents the effects of Priapus Draft, FemDraft, Tiny Draft, Bust Draft, Succubus Draft and Tentacle Tonic from applying when thrown at you.
- Added two new character initial weakness Traits:
	- "Naive"
		- 50% to not get cynical after recovering from a mindgame status (enthralled, trance, flatfooted, etc)
	- "Foot Fetishist"
		- Starts each match with a foot fetish at the minimum magnitude
- Added new Traits:
	- Heels Pro:
		- Wearing heels does not reduce your speed, and does not make you easily knocked down (generally heels have higher hotness bonuses)
		- Requires 15 Seduction, 20 Cunning, Limb Training 1
	- Heels Master:
		- While wearing heels, you have a 33% chance to avoid knockdowns (Tackle, Trip, Shove, etc)
		- Requires 25 Seduction, 40 Cunning, Limb Training 2, Heels Pro
- Merged in some foot fetish content from Sakruff (Thanks!)
	- Updated text on foot job/foot pump to have events for girls
	- Added a new skill Foot Smother
		- Unlocks at 20 Fetish
		- Can be used when shoeless and you are standing over the opponent
		- Has a raised chance to inflict foot fetish
- If you start off as a female or a herm, you start with bra and panties instead of boxers.
	- If you start off as a female or a herm, you start off with b cup breasts (up from flat)
- Changed the AI:
	- The AI now will consider the opponent differently. This mainly makes it so that more interesting things can be added.
	- The AI now will pick the best item to drink/throw instead of a completely random item.
	- The AI now will take the male preference slider into account when determining what move is good